--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: PE Extra Keys Android
+name: PE EK Fork Android
 
 # Controls when the action will run. 
 on: [workflow_dispatch]
@@ -76,5 +76,5 @@ jobs:
       - name: Publish Artifact
         uses: actions/upload-artifact@v2.2.4
         with:
-          name: PE Extra Keys Android
+          name: PE EK Fork Android
           path: export/release/android/bin/app/build/outputs/apk/debug
